--- a/root/dnevnikUcitelj/.env
+++ b/root/dnevnikUcitelj/.env
@@ -20,7 +20,7 @@ CI_ENVIRONMENT = development
 # APP
 #--------------------------------------------------------------------
 
-app.baseURL = 'http://localhost/'
+app.baseURL = 'http://192.168.122.158/'
 # app.forceGlobalSecureRequests = false
 
 # app.sessionDriver = 'CodeIgniter\Session\Handlers\FileHandler'
