--- a/mysql/my.ini
+++ b/mysql/my.ini
@@ -38,9 +38,9 @@ socket		= /tmp/mysql.sock
 port		= 3306
 
 
-innodb_data_home_dir = C:/Users/garry/Desktop/zakljucna\mysql\data\
+innodb_data_home_dir = E:/zakljucna\mysql\data\
 innodb_data_file_path = ibdata1:10M:autoextend
-innodb_log_group_home_dir = C:/Users/garry/Desktop/zakljucna\mysql\data\
+innodb_log_group_home_dir = E:/zakljucna\mysql\data\
 
 # You can set .._buffer_pool_size up to 50 - 80 %
 # of RAM but beware of setting memory usage too high
